--- a/demo.html
+++ b/demo.html
@@ -168,13 +168,13 @@
                 var geocode = result.geocodes[0];
                 rentMarker = new AMap.Marker({
                     map: map,
-                    title: address,
+                    title: address[0],
                     icon: 'http://webapi.amap.com/theme/v1.3/markers/n/mark_b.png',
                     position: [geocode.location.getLng(), geocode.location.getLat()]
                 });
                 rentMarkerArray.push(rentMarker);
 
-                rentMarker.content = "<div>房源：<a target = '_blank' href='http://cd.fang.lianjia.com/loupan/?key=" + address + "'>" + address + "</a><div>"
+                rentMarker.content = "<div>房源：<a target = '_blank' href='" + address[1] + "'>" + address[0] + "</a><div>"
                 rentMarker.on('click', function(e) {
                     infoWindow.setContent(e.target.content);
                     infoWindow.open(map, e.target.getPosition());
@@ -231,7 +231,7 @@
         $.get(fileName, function(data) {
             data = data.split("\n");
             data.forEach(function(item, index) {
-                rent_locations.add(item.split(",")[1]);
+                rent_locations.add([item.split(",")[1],item.split(",")[2]]);
             });
             rent_locations.forEach(function(element, index) {
                 addMarkerByAddress(element);
